# easyconnect-svn

tags/easyconnectserver-0.1.5/: Makefile.in  autogen.sh  configure  configure.in
tags/easyconnectserver-0.1.5/config/devices/: storage.conf
tags/easyconnectserver-0.1.5/modules/cpu-watcher/: cpu-watcher.conf
tags/easyconnectserver-0.1.5/modules/storage/: storage.py
tags/easyconnectserver-0.1.5/modules/vscope/: base64.c
tags/easyconnectserver-0.1.5/src/: Makefile.in  config.c  config.h  functionlist.c  main.c  modulelist.h  pythonmodule.h
tags/easyconnectserver-0.1.5/src/iniparser/: Makefile.am  Makefile.in
tags/easyconnectserver-0.1.5/src/tcpcliserver/: Makefile.in  disposer.h  request.h  sender.h  tqueue.c
tags/easyconnectserver-0.1.5/src/tcpcliserver/cl/: Makefile.in
trunk/: AUTHORS
trunk/easyconnectlibs/php/: easyconnectlib.php
trunk/easyconnectlibs/python/: easyconnectlib.py
trunk/easyconnectserver/: Makefile.am  configure
trunk/easyconnectserver/config/: easyconnect.conf  ecfunc.conf
trunk/easyconnectserver/config/devices/: cpu-watcher.conf  storage.conf  vscope.conf
trunk/easyconnectserver/modules/: Makefile  Makefile.in
trunk/easyconnectserver/modules/cpu-watcher/: cpu-watcher.c
trunk/easyconnectserver/modules/storage/: storage.py  vcd.py
trunk/easyconnectserver/modules/vscope/: base64.c  base64.h  tqueue.c  vscope.c  vscope.conf  vscopedevice.c  vscopedevice.h
trunk/easyconnectserver/server/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in
trunk/easyconnectserver/server/autom4te.cache/: output.0  requests  traces.0  traces.1
trunk/easyconnectserver/server/src/: Makefile  Makefile.am  Makefile.in  cmodule.c  cmodule.h  config.c  config.h  devicefunctions.c  devicefunctions.h  devicelist.c  devicelist.h  functionlist.c  functionlist.h  generalfunctions.c  generalfunctions.h  main.c  modulelist.c  modulelist.h  pythonmodule.c  pythonmodule.h  scoped.c
trunk/easyconnectserver/server/src/.deps/: config.Po  devicefunctions.Po  devicelist.Po  functionlist.Po  generalfunctions.Po  main.Po
trunk/easyconnectserver/server/src/iniparser/: iniparser.c
trunk/easyconnectserver/server/src/tcpcliserver/: Makefile  Makefile.in  disposer.c  disposer.h  history.h  netdata.c  netdata.h  netfunctionlist.c  netfunctionlist.h  network.c  network.h  request.c  request.h  sender.c  sender.h  tcpcliserver.h  tqueue.c  tqueue.h
trunk/easyconnectserver/server/src/tcpcliserver/.deps/: disposer.Po  netdata.Po  netfunctionlist.Po  network.Po  request.Po  sender.Po  tcpcliserver.Po  tqueue.Po
trunk/easyconnectserver/server/src/tcpcliserver/cl/: Makefile  Makefile.in  cl.h  history.h
trunk/easyconnectserver/server/src/tcpcliserver/cl/.deps/: cl.Po  history.Po
trunk/easyconnectserver/src/: Makefile.am  cmodule.h  main.c  pythonmodule.c
trunk/easyconnectserver/src/iniparser/: iniparser.c  iniparser.h
trunk/easyconnectserver/src/tcpcliserver/: Makefile.am  history.c  netdata.c  netfunctionlist.c  netfunctionlist.h  network.c  sender.c  tcpcliserver.c  tcpcliserver.h  tqueue.h
trunk/easyconnectserver/src/tcpcliserver/cl/: Makefile.am  cl.c  history.c
trunk/examples/php/: servercpuload.php
trunk/examples/python/pyCpuMon/: pyCpuMon.py  wxPyPlot.py
trunk/examples/python/pyLogic/: pyLogic.py
trunk/examples/python/pyPlot/: pyPlot.py
trunk/examples/python/vscope/: vcd.py  vscope.py
