AC_INIT(configure.in)
AC_SEARCH_LIBS([ioperm], [ioperm])


AC_CHECK_LIB([pthread], [pthread_create],[], [echo Please install the pthread library.])
AC_CHECK_LIB([python2.4], [Py_Initialize],[], [echo Please install the python2.4 developement library.]) 
AC_CHECK_LIB([dl], [dlopen], [])

PACKAGE=easyconnect
VERSION=0.1.5

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_LANG_C
AC_PROG_CC
AC_PROG_RANLIB

AC_OUTPUT(Makefile src/Makefile  src/iniparser/Makefile src/tcpcliserver/Makefile src/tcpcliserver/cl/Makefile)
