#INCLUDES = -I$(top_srcdir)/src/helper -I$(top_srcdir)/src/target $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libtcpcliserver.a
noinst_HEADERS = tcpcliserver.h
SUBDIRS = cl

libtcpcliserver_a_SOURCES = tcpcliserver.c disposer.c tqueue.c request.c netdata.c network.c netfunctionlist.c sender.c

#libtcpcliserver_la_LIBADD = /usr/lib/libpthread.a
